Lab2 task Y, Lab3 task 5 remaining

--- a/Tayyab/Lab3/makefile
+++ b/Tayyab/Lab3/makefile
@@ -9,6 +9,9 @@ main.o : main.c
 functions.o : functions.c
 	gcc -c functions.o functions.c
 
+%.o : %.c
+	gcc -c %.o %.c
+
 debug:
 	gcc -d -o main main.o functions.o -lm
 
