--- a/Hira/Lab1/.gitignore
+++ b/Hira/Lab1/.gitignore
@@ -1,4 +1,11 @@
-*.out
-*.out:Zone.Identifier
-*.c:Zone.Identifier
-*.c:Zone.Identifier:Zone.Identifier
+# Ignore all files
+*
+
+# Except .c files
+!*.c
+
+# Ignore specific files mentioned in the ls output
+a.out
+a.out:Zone.Identifier
+template_code_Part0.c:Zone.Identifier:Zone.Identifier
+template_code_Part0.c:Zone.Identifier
