--- a/Mujtaba/.gitignore
+++ b/Mujtaba/.gitignore
@@ -1,5 +1,21 @@
 *.o
+*.s
 *.exe
 *.pdf
+*.txt
+*.bin
 *.vscode
 *.log
+/home/muhammad-mujtaba-rawn/Documents/Xcelerium-IC-Design-Training/Mujtaba/Lab1/template_code_Part0
+
+/home/muhammad-mujtaba-rawn/Documents/Xcelerium-IC-Design-Training/Mujtaba/Lab2/Booth_Multiplier
+
+/home/muhammad-mujtaba-rawn/Documents/Xcelerium-IC-Design-Training/Mujtaba/Lab2/Booth_Multiplier.c
+
+/home/muhammad-mujtaba-rawn/Documents/Xcelerium-IC-Design-Training/Mujtaba/Lab2/memory_maze
+
+/home/muhammad-mujtaba-rawn/Documents/Xcelerium-IC-Design-Training/Mujtaba/Lab2/template_code_Part1
+
+/home/muhammad-mujtaba-rawn/Documents/Xcelerium-IC-Design-Training/Mujtaba/Lab3/Excercise_Lab5/Advanced_Makefile/main
+
+
