--- a/Tayyab/Lab3/makefile2
+++ b/Tayyab/Lab3/makefile2
@@ -1,3 +1,9 @@
+# Name: makefile
+# Author: Muhammad Tayyab
+# Date: 10-7-2024
+# Description: makefile for Lab 3 task 5.3
+
+
 SCRIPTS = $(wildcard *.sh)
 INSTALLDIR = installscripts
 
