Lab 6 tasks 1, 2 complete. Spike simmulation to be done

--- a/Tayyab/Lab6/makefile
+++ b/Tayyab/Lab6/makefile
@@ -8,6 +8,9 @@ LINKERSCRIPT = link.ld
 FILE = ""
 
 # Default target
+help:
+	cat readme.md
+
 build_as: assemble link
 
 build_c: compile assemble link
@@ -23,7 +26,15 @@ dump:
 	@$(OD) -D $(FILE) > $(FILE).s
 
 compile:
+# compile
 	@$(CC) -S $(basename $(FILE)).c -o $(basename $(FILE)).s -T $(LINKERSCRIPT)
+
+# replace main with _start
+	@sed -i 's/main/_start/g' $(basename $(FILE)).s
+# remove last three lines to prevent return from main
+	@head -n -3 $(basename $(FILE)).s > temp.tmp ; mv temp.tmp $(basename $(FILE)).s
+# add signal test pass for Spike and ".global _start"
+	@echo "end:\n    # Signal test pass to Spike\n    li t0, 1\n    la t1, tohost\n    sd t0, (t1)\n\n.section .tohost\n.align 3\ntohost: .dword 0\nfromhost: .dword 0\n.global _start\n" >> $(basename $(FILE)).s
 
 spike: assemble link
 	@spike -d $(basename $(FILE)).elf
