Added Complete code of assembly problems

--- a/Ibrahim/src/xce_lab6_assembly/Makefile
+++ b/Ibrahim/src/xce_lab6_assembly/Makefile
@@ -5,7 +5,7 @@ LD = riscv64-unknown-elf-ld
 SPIKE = spike
 
 # List of programs with directories
-PROGS = Problems/Problem_1/problem_1 Problems/Problem_2/problem_2 #Problem3/problem3
+PROGS = Problems/Problem_1/problem_1 Problems/Problem_2/problem_2 Problems/Problem_3/problem_3 Problems/Problem_4/problem_4 Problems/Problem_5/problem_5
 
 # Default target
 all: $(PROGS)
@@ -43,6 +43,6 @@ endif
 
 # Clean up
 clean:
-	rm -f Problems/Problem_1/*.o Problems/Problem_2/*.o Problems/Problem_1/problem_1 Problems/Problem_2/problem_2
+	rm -f Problems/Problem_1/*.o Problems/Problem_2/*.o Problems/Problem_3/*.o Problems/Problem_4/*.o Problems/Problem_5/*.o Problems/Problem_1/problem_1 Problems/Problem_2/problem_2 Problems/Problem_3/problem_3 Problems/Problem_4/problem_4 Problems/Problem_5/problem_5
 
 .PHONY: all run debug clean
