--- a/Nasir/.gitignore
+++ b/Nasir/.gitignore
@@ -65,4 +65,5 @@ src/exp5/reverseArray
 src/exp5/restoringDivision
 src/exp5/nonRestoringDivision
 src/exp5/nonRestoringDivision2
+src/exp5/restoringDivisionRiscV
 
