Removed unnecessary folders

--- a/Ahsan/src/Python Tasks/Makefile
+++ b/Ahsan/src/Python Tasks/Makefile
@@ -6,7 +6,7 @@ run:
 clean:
 	rm -f *.pyc __pycache__/*
 
-# Help target to provide usage information
+# Help target to provide user the method to use this file
 help:
 	@echo "Usage:"
 	@echo "  make run SCRIPT=<script_name.py>  - Run the specified Python script"
