Complete implmentation LAB-6,7

--- a/Hira/Assembly/.gitignore
+++ b/Hira/Assembly/.gitignore
@@ -7,3 +7,38 @@ absolute_difference.s:Zone.Identifier
 bit_set.o:Zone.Identifier  
 
 factorial.s:Zone.Identifier
+
+
+array.s:Zone.Identifier
+factorial.o
+array:Zone.Identifier
+factorial.o:Zone.Identifier
+MakeFile.sh:Zone.Identifier
+example
+absolute_difference
+example.o
+factorial.s:Zone.Identifier
+absolute_difference.dump
+example.o:Zone.Identifier
+factorial:Zone.Identifier
+absolute_difference.dump:Zone.Identifier
+insertion_sort
+absolute_difference.o
+example.s:Zone.Identifier
+insertion_sort.o
+absolute_difference.o:Zone.Identifier
+example:Zone.Identifier
+insertion_sort.o:Zone.Identifier
+insertion_sort.s
+absolute_difference.s:Zone.Identifier
+example_2.o
+insertion_sort.s:Zone.Identifier
+absolute_difference:Zone.Identifier
+example_2.o:Zone.Identifier
+insertion_sort:Zone.Identifier
+array
+example_2.s:Zone.Identifier
+link.ld:Zone.Identifier
+array.o:Zone.Identifier
+example_2:Zone.Identifier
+factorial
