--- a/Nasir/.gitignore
+++ b/Nasir/.gitignore
@@ -34,7 +34,6 @@
 CMakeFiles/
 CMakeCache.txt
 cmake_install.cmake
-Makefile
 compile_commands.json
 
 # Logs
@@ -78,5 +77,7 @@ src/exp3/lab5/advancedMakefile/function.d
 src/exp3/lab5/advancedMakefile/main.d
 src/exp3/lab5/advancedMakefile/myprogram
 src/exp3/lab5/basicMakefile/myprogram
+
+src/comb_multiplier/mul
 
 
