Binary multiplier code and documentation. Optimised Add1 code from 3 states to 2

--- a/Tayyab/Add1/makefile
+++ b/Tayyab/Add1/makefile
@@ -13,4 +13,4 @@ simulate : compile
 	@$(SIMULATOR) -c Add1_tb -quiet -do "run $(SIMTIME)" -do "exit"
 
 clean:
-	@rm -f -r work
+	@rm -f -r work transcript
