--- a/Ahsan/src/Signed_Multiplier/Makefile
+++ b/Ahsan/src/Signed_Multiplier/Makefile
@@ -1,18 +1,26 @@
-# Makefile for Systemverilog code
+#compiler and simulator
+IVERILOG = iverilog
+VVP = vvp
 
-# Compiler and flags
-CC = iverilog
-CFLAGS = -g2012
+# Directories and files for 4bit_counter
+MULTIPLIER_VERILOG_FILES = src/Sign_multiplier.sv src/Half_adder.sv src/Full_adder.sv test/tb.sv
+MULTIPLIER_OUTPUT_FILE = out.vvp
 
 # Default target
-all:
-	$(CC) $(CFLAGS) -o out.vvp tb.sv Sign_multiplier.sv Half_adder.sv Full_adder.sv
+all: mult
 
-# Rule to run the program
-run:
-	vvp out.vvp
+#Compile and simulate multiplier
+mult: compile_mult simulate_mult
 
+compile_mult:
+	$(IVERILOG) -g2012 -o $(MULTIPLIER_OUTPUT_FILE) $(MULTIPLIER_VERILOG_FILES)
+
+simulate_mult:
+	$(VVP) $(MULTIPLIER_OUTPUT_FILE)
+
+#Clean up generated files
 clean:
-	rm -f *.vvp
+	rm -f $(MULTIPLIER_OUTPUT_FILE)
 
-.PHONY: all run clean
+.PHONY: all mult compile_mult simulate_mult clean
+
