Added 4bit adder code and STG

--- a/Ibrahim/src/sequential_logic/Makefile
+++ b/Ibrahim/src/sequential_logic/Makefile
@@ -16,11 +16,18 @@ POP_QUIZ_VCD_FILE = $(POP_QUIZ_DIR)/test/pop_quiz.vcd
 COUNTER_DIR = 4bit_counter
 COUNTER_VERILOG_FILES = $(COUNTER_DIR)/src/4bit_counter.sv $(COUNTER_DIR)/test/4bit_counter_tb.sv
 COUNTER_TOP_MODULE = 4bit_counter_tb
-COUNTER_OUTPUT_FILE = $(COUNTER_DIR)/simulation.vvp
+COUNTER_OUTPUT_FILE = $(COUNTER_DIR)/test/simulation.vvp
 COUNTER_VCD_FILE = $(COUNTER_DIR)/test/counter.vcd
 
+# Directories and files for 4bit_adder
+ADDER_DIR = 4bit_adder
+ADDER_VERILOG_FILES = $(ADDER_DIR)/src/sequential_adder.sv $(ADDER_DIR)/test/sequential_adder_tb.sv
+ADDER_TOP_MODULE = sequential_adder_tb
+ADDER_OUTPUT_FILE = $(ADDER_DIR)/test/simulation.vvp
+ADDER_VCD_FILE = $(ADDER_DIR)/test/adder.vcd
+
 # Default target
-all: pop_quiz counter
+all: pop_quiz counter adder
 
 # Compile and simulate pop_quiz
 pop_quiz: compile_pop_quiz simulate_pop_quiz
@@ -46,8 +53,20 @@ simulate_counter:
 view_counter:
 	$(GTKWAVE) $(COUNTER_VCD_FILE)
 
+# Compile and simulate 4bit_adder
+adder: compile_adder simulate_adder
+
+compile_adder:
+	$(IVERILOG) -g2012 -o $(ADDER_OUTPUT_FILE) $(ADDER_VERILOG_FILES)
+
+simulate_adder:
+	$(VVP) $(ADDER_OUTPUT_FILE)
+
+view_adder:
+	$(GTKWAVE) $(ADDER_VCD_FILE)
+
 # Clean up generated files
 clean:
-	rm -f $(POP_QUIZ_OUTPUT_FILE) $(POP_QUIZ_VCD_FILE) $(COUNTER_OUTPUT_FILE) $(COUNTER_VCD_FILE)
+	rm -f $(POP_QUIZ_OUTPUT_FILE) $(POP_QUIZ_VCD_FILE) $(COUNTER_OUTPUT_FILE) $(COUNTER_VCD_FILE) $(ADDER_OUTPUT_FILE) $(ADDER_VCD_FILE)
 
-.PHONY: all pop_quiz compile_pop_quiz simulate_pop_quiz view_pop_quiz counter compile_counter simulate_counter view_counter clean
+.PHONY: all pop_quiz compile_pop_quiz simulate_pop_quiz view_pop_quiz counter compile_counter simulate_counter view_counter adder compile_adder simulate_adder view_adder clean
