Sequential signed multiplier documentation

--- a/Tayyab/SequentialSignedMultiplier/makefile
+++ b/Tayyab/SequentialSignedMultiplier/makefile
@@ -6,14 +6,18 @@ COMPILER = vlog
 SIMULATOR = vsim
 
 SIMTIME = 1 ms			# Simulation running time
-NUMTESTS = 1e4
+NUMTESTS = 1e4			# Number of random tests to run
 
+.PHONY: compile
 compile : work/_lib.qdb
+.PHONY: simulate
+simulate : transcript
+
 
 work/_lib.qdb : sim/$(TB) $(SOURCES)
 	$(COMPILER) -nologo $?
 
-simulate : compile
+transcript : compile
 	@$(SIMULATOR) -c $(basename $(TB)) -quiet -do "run $(SIMTIME)" -do "exit" -g NUMTESTS=$(NUMTESTS)
 
 clean:
