Updated .gitignore to ignore simulation files

--- a/Hamza/.gitignore
+++ b/Hamza/.gitignore
@@ -1,10 +1,6 @@
 # Prerequisites
 *.d
 
-/.vscode
-.vscode
-**/.vscode
-
 # Object files
 *.o
 *.ko
@@ -60,3 +56,7 @@ dkms.conf
 # simulation files
 *.vcd
 *.vvp
+*transcript
+*vsim.wlf
+*work/
+*.vscode/
