Updated gitignore to ignore simulation files

--- a/Ibrahim/.gitignore
+++ b/Ibrahim/.gitignore
@@ -34,7 +34,11 @@ work/
 *.wlf
 modelsim.ini
 vsim.wlf
+*.tmp
+*.out
 
+# Ignore compiled simulation files in the src/Sequential_Multiplier directory
+src/Sequential_Multiplier/tb_seq_multiplier
 
 # Simulation Files
 *.vvp
