Updated .gitignore to remove identifier files

--- a/Ibrahim/.gitignore
+++ b/Ibrahim/.gitignore
@@ -59,6 +59,8 @@ vsim.wlf
 # Ignore compiled simulation files in the src/Sequential_Multiplier directory
 src/Sequential_Multiplier/tb_seq_multiplier
 
+#identifier files
+*.Identifier
 
 # Simulation Files
 *.vvp
