--- a/Hamza/.gitignore
+++ b/Hamza/.gitignore
@@ -54,6 +54,7 @@ Mkfile.old
 dkms.conf
 
 # simulation files
+*.xml
 *.vcd
 *.vvp
 *transcript
@@ -61,3 +62,6 @@ dkms.conf
 *work/
 *.vscode/
 *obj_dir/
+*venv/
+*sim_build/
+*__pycache__/
