Update CocoTb environment to use verialtor

--- a/Hamza/src/Sequential-Circuit/Cocotb-Multiplier/test/Makefile
+++ b/Hamza/src/Sequential-Circuit/Cocotb-Multiplier/test/Makefile
@@ -1,4 +1,4 @@
-SIM ?= icarus
+SIM ?= verilator
 TOPLEVEL_LANG ?= verilog
 VERILOG_SOURCES += $(PWD)/../src/Controller.sv
 VERILOG_SOURCES += $(PWD)/../src/Datapath.sv
