SequentialSignedMultiplier: changed moore controller to mealy

--- a/Tayyab/SequentialSignedMultiplier/makefile
+++ b/Tayyab/SequentialSignedMultiplier/makefile
@@ -1,32 +1,15 @@
 
-SOURCES = src/SequentialSignedMultiplier.sv src/controller.sv src/datapath.sv
-TB = SequentialSignedMultiplier_tb.sv	# SV testbench present in sim/ folder
+SOURCES = src/SequentialSignedMultiplier.sv src/datapath.sv src/controller.sv
+TB = sim/SequentialSignedMultiplier_tb.cpp
 
-COMPILER = vlog
-SIMULATOR = vsim
+NUMTESTS = 10000
 
-# Flags for vsim in simulate target
-VSIM_FLAGS = -c -quiet 
-VSIM_WAVE_FLAGS = -voptargs=+acc=npr -do "vcd file waveform.vcd" -do "vcd add -r /$(TB)/*"
-VSIM_RUN_FLAGS = -do "run $(SIMTIME)" -do "exit"
+verilate: $(SOURCES)
+	verilator --cc $?
 
-SIMTIME = 1 ms			# Simulation running time
-NUMTESTS = 1e4			# Number of random tests to run
-
-.PHONY: compile
-compile : work/_lib.qdb
-.PHONY: simulate
-simulate : transcript
-
-
-work/_lib.qdb : sim/$(TB) $(SOURCES)
-	$(COMPILER) -nologo $?
-
-transcript : compile
-	@$(SIMULATOR) $(VSIM_FLAGS) $(basename $(TB)) $(VSIM_RUN_FLAGS) -g NUMTESTS=$(NUMTESTS)
-
-waveform.vcd : compile
-	@$(SIMULATOR) $(VSIM_FLAGS) $(basename $(TB)) $(VSIM_WAVE_FLAGS) $(VSIM_RUN_FLAGS) $(VSIM_PARAMS) -g NUMTESTS=1
+simulate : $(SOURCES)
+	verilator --trace --build --cc $? --exe $(TB)
+	./obj_dir/VSequentialSignedMultiplier $(NUMTESTS)
 
 clean:
-	@rm -f -r work transcript
+	@rm -r obj_dir *.vcd
