--- a/Ehsan/src/Cocotb_Sequential_Multiplier/makefile
+++ b/Ehsan/src/Cocotb_Sequential_Multiplier/makefile
@@ -1,2 +1,11 @@
-all:
+all: run
+
+run:
 	make -C test/
+
+clean:
+	rm -rf test/__pycache__
+	rm -rf test/results.xml
+	rm -rf test/sim_build
+	rm -rf test/*.vcd
+
